--- a/contact.html
+++ b/contact.html
@@ -7,8 +7,10 @@
     <title>Test Site</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="/css/all.min.css">
+    <link rel="stylesheet" href="css/nav.css">
+    <link rel="stylesheet" href="css/footer.css">
+
 
     </head>
 
@@ -31,7 +33,11 @@
                 <a class="dropdown-item" href="about.html">About Us </a>
                 <a class="dropdown-item" href="team.html">Team</a>
                 <a class="dropdown-item" href="testimonials.html">Testimonials</a>
-                <a class="dropdown-item dropdown-toggle" href="#" role="button" data-toggle="dropdown">Deep Dropdown</a>
+                <a class="dropdown-item dropdown-toggle" data-toggle="dropdown" href="#">Deep Drop Down</a>
+                <div class="dropdown-menu border-0">
+                    <a class="dropdown-item" href="#">item 1</a>
+                    <a class="dropdown-item" href="#">item 2</a>
+                    <a class="dropdown-item" href="#">item 3</a>
               </div>
               <li class="nav-item">
                 <a class="nav-link" href="services.html">SERVICES</a>
@@ -137,142 +143,45 @@
 </body>
 
 
-
-
-
-
-
-
-<!-- Footer -->
-<footer class="text-lg-start text-muted" style="padding-top: 1px; background-color: rgb(32, 32, 32);">
-  <!-- Section: Social media -->
-  </section>
-  <!-- Section: Social media -->
-
-  <!-- Section: Links  -->
-  <section class="">
-    <div class="container text-md-start mt-5">
-      <!-- Grid row -->
-      <div class="row mt-3">
-        <!-- Grid column -->
-        <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
-          <!-- Content -->
-          <h6 class="text-uppercase fw-bold mb-4">
-            <main class="text-white" style="font-size: 14px;">
-            <i class="me-3 text-secondary"></i>COMPANY
-            <main>
-          </h6>
-          <p class="text-white-50">
-           A108 Adam Street <br>
-           New York, NY 5350225<br>
-           United States
-          <br>
-</br>
-           Phone: +1 5589 55488 55
-           Email: info@example.com
-          </p>
-        </div>
-        <!-- Grid column -->
-
-        <!-- Grid column -->
-        <div class="col-md-2 col-lg-2 col-xl-2 mb-4 text-white list-group">
-          <!-- Links -->
-          <h6 class=" fw-bold mb-3" style="font-size: 12px;">
-            Useful Links
-          </h6>
-          <main class="text-white-50">
-          <p>
-            <a href="#!" class="text-reset"><i class="fa-sharp fa-solid fa-chevron-right fa-2xs" style="color: #0ec41a;"></i> Home</a>
-          </p>
-          <p>
-            <a href="#!" class="text-reset"><i class="fa-sharp fa-solid fa-chevron-right fa-2xs" style="color: #0ec41a;"></i> About Us</a>
-          </p>
-          <p>
-            <a href="#!" class="text-reset"><i class="fa-sharp fa-solid fa-chevron-right fa-2xs" style="color: #0ec41a;"></i> Services</a>
-          </p>
-          <p>
-            <a href="#!" class="text-reset"><i class="fa-sharp fa-solid fa-chevron-right fa-2xs" style="color: #0ec41a;"></i> Terms of service</a>
-          </p>
-          <p>
-            <a href="#!" class="text-reset"><i class="fa-sharp fa-solid fa-chevron-right fa-2xs" style="color: #0ec41a;"></i> Privacy policy</a>
-          </p>
-        </main>
-        </div>
-        <!-- Grid column -->
-
-        <!-- Grid column -->
-        <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
-          <!-- Links -->
-          <h6 class="fw-bold mb-4 text-white"  style="font-size: 12px;">
-            Our Services
-          </h6>
-          <ul>
-          <main class="text-white-50 text-muted">
-          <p>
-            <a href="#!" class="text-reset"><i class="fa-sharp fa-solid fa-chevron-right fa-2xs" style="color: #0ec41a;"></i> Web Design</a>
-          </p>
-          <p>
-            <a href="#!" class="text-reset"><i class="fa-sharp fa-solid fa-chevron-right fa-2xs" style="color: #0ec41a;"></i> Web Development</a>
-          </p>
-          <p>
-            <a href="#!" class="text-reset"><i class="fa-sharp fa-solid fa-chevron-right fa-2xs" style="color: #0ec41a;"></i> Product Management</a>
-          </p>
-          <p>
-            <a href="#!" class="text-reset"><i class="fa-sharp fa-solid fa-chevron-right fa-2xs" style="color: #0ec41a;"></i> Marketing</a>
-          </p>
-          <p>
-            <a href="#!" class="text-reset"><i class="fa-sharp fa-solid fa-chevron-right fa-2xs" style="color: #0ec41a;"></i> Graphic Design</a>
-          </p>
-          </main>
-        </div>
-        <!-- Grid column -->
-
-        <!-- Grid column -->
-        <div class="col-md-4 col-lg-3 col-xl-3 text-left mb-md-0 mb-4 text-white">
-          <!-- Links -->
-          <h6 class="fw-bold mb-4" style="font-size: 12px;">Join Our Newsletters</h6>
-          <p class="text-white-50">Tamen quem nulla quae legam multos aute sint culpa<br>legam noster magna </p>
-    
-          </p>
-          <div class="input-group">
-            <input type="search" class="form-control-sm rounded" style="margin-top: 4px;" aria-label="Search" aria-describedby="search-addon" />
-            <button type="button" class="btn bg-success">Subscribe</button>
+ <!-- FOOTER -->
+ <footer class="w-100 py-4 flex-shrink-0">
+  <div class="container py-4" style="width: 70%;">
+      <div class="row gy-4 gx-5">
+          <div class="col-lg-4 col-md-6">
+              <h6 class="h1 text-light" style="font-size: medium;">COMPANY</h6>
+              <Phone: class="text-secondary">A108 Adam Street <br> New Yor, NY 535022 <br> United States <br><br>Phone: +1 5589 55488 55 <br> Email: info@example.com</p>
           </div>
-        </div>
-        <!-- Grid column -->
+          <div class="col-lg-2 col-md-6">
+              <h5 class="text-white mb-3" style="font-size: medium;">Useful Links</h5>
+              <ul class="list-unstyled text-muted" style="font-size: 15px;">
+                  <li><a href="#"><a href="#!" class="text-reset"><i class="fa-sharp fa-solid fa-chevron-right fa-2xs" style="color: #0ec41a;"></i> Home</a></li>
+                  <li><a href="#"><a href="#!" class="text-reset"><i class="fa-sharp fa-solid fa-chevron-right fa-2xs" style="color: #0ec41a;"></i>  About Us</a></li>
+                  <li><a href="#"><a href="#!" class="text-reset"><i class="fa-sharp fa-solid fa-chevron-right fa-2xs" style="color: #0ec41a;"></i>  Services</a></li>
+                  <li><a href="#"><a href="#!" class="text-reset"><i class="fa-sharp fa-solid fa-chevron-right fa-2xs" style="color: #0ec41a;"></i>  Terms of service</a></li>
+                  <li><a href="#"><a href="#!" class="text-reset"><i class="fa-sharp fa-solid fa-chevron-right fa-2xs" style="color: #0ec41a;"></i> Privacy policy</a></li>
+              </ul>
+          </div>
+          <div class="col-lg-2 col-md-6">
+              <h5 class="text-white mb-3" style="font-size: medium;">Our Services</h5>
+              <ul class="list-unstyled text-muted" style="font-size: 15px;">
+                  <li><a href="#"><a href="#!" class="text-reset"><i class="fa-sharp fa-solid fa-chevron-right fa-2xs" style="color: #0ec41a;"></i> Web Design</a></li>
+                  <li><a href="#"><a href="#!" class="text-reset"><i class="fa-sharp fa-solid fa-chevron-right fa-2xs" style="color: #0ec41a;"></i> Web Development</a></li>
+                  <li><a href="#"><a href="#!" class="text-reset"><i class="fa-sharp fa-solid fa-chevron-right fa-2xs" style="color: #0ec41a;"></i> Product Management</a></li>
+                  <li><a href="#"><a href="#!" class="text-reset"><i class="fa-sharp fa-solid fa-chevron-right fa-2xs" style="color: #0ec41a;"></i> Marketing</a></li>
+                  <li><a href="#"><a href="#!" class="text-reset"><i class="fa-sharp fa-solid fa-chevron-right fa-2xs" style="color: #0ec41a;"></i> Grapchic Design</a></li>
+              </ul>
+          </div>
+          <div class="col-lg-4 col-md-6">
+              <h5 class="text-white mb-3" style="font-size: medium;">Join Our  Newsletter</h5>
+              <p class="small text-muted">Tanem quem mulla quae legam multos aute sint culpa<br> legam noster magna</p>
+              <form action="#">
+                  <div class="input-group mb-3" style="background-color: white;">
+                      <input class="form-control rounded" type="text" aria-describedby="button-addon2">
+                      <button type="button" class="btn btn-success" id="button-addon2" type="button">Subscribe</button>
+                  </div>
+              </form>
+          </div>
       </div>
-      <!-- Grid row -->
-    </div>
-  </section>
-  <!-- Section: Links  -->
-
-  <!-- Copyright -->
-  <div class="text-left p-4 text-white" style="background-color: rgba(0, 0, 0, 0.952);">
-    © 2021 Copyright:
-    <a class="text-reset fw-bold" href="https://mdbootstrap.com/">MDBootstrap.com</a>
-    <div class="col-md-3 col-lg-2 col-xl-2 float-right mb-4">
-    <div>
-      <a href="" class="me-4 link-secondary">
-        <i class="fab fa-facebook-f"></i>
-      </a>
-      <a href="" class="me-4 link-secondary">
-        <i class="fab fa-twitter"></i>
-      </a>
-      <a href="" class="me-4 link-secondary">
-        <i class="fab fa-google"></i>
-      </a>
-      <a href="" class="me-4 link-secondary">
-        <i class="fab fa-instagram"></i>
-      </a>
-      <a href="" class="me-4 link-secondary">
-        <i class="fab fa-linkedin"></i>
-      </a>
-      <a href="" class="me-4 link-secondary">
-        <i class="fab fa-github"></i>
-      </a>
-    </div>
   </div>
-  <!-- Copyright -->
 </footer>
-<!-- Footer -->
     </html>
