--- a/services.html
+++ b/services.html
@@ -9,7 +9,10 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
 
      <!-- CSS link -->
-    <link rel="stylesheet" href="services.css">
+    <link rel="stylesheet" href="css/services.css">
+    <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="css/nav.css">
+   
 
 
     <!-- fontawsesome -->
@@ -37,7 +40,11 @@
                 <a class="dropdown-item" href="about.html">About Us </a>
                 <a class="dropdown-item" href="team.html">Team</a>
                 <a class="dropdown-item" href="testimonials.html">Testimonials</a>
-                <a class="dropdown-item dropdown-toggle" href="#" role="button" data-toggle="dropdown">Deep Dropdown</a>
+                <a class="dropdown-item dropdown-toggle" data-toggle="dropdown" href="#">Deep Drop Down</a>
+                            <div class="dropdown-menu border-0">
+                                <a class="dropdown-item" href="#">item 1</a>
+                                <a class="dropdown-item" href="#">item 2</a>
+                                <a class="dropdown-item" href="#">item 3</a>
               </div>
               <li class="nav-item">
                 <a class="nav-link" href="services.html">SERVICES</a>
@@ -288,18 +295,6 @@
         </div>
 
 
-
-
-
-
-
-
-
-
-
-
-
-
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
@@ -307,4 +302,45 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
 
   </body>
+   <!-- FOOTER -->
+   <footer class="w-100 py-4 flex-shrink-0">
+    <div class="container py-4">
+        <div class="row gy-4 gx-5">
+            <div class="col-lg-4 col-md-6">
+                <h6 class="h1 text-light" style="font-size: medium;">COMPANY</h6>
+                <Phone: class="text-secondary">A108 Adam Street <br> New Yor, NY 535022 <br> United States <br><br>Phone: +1 5589 55488 55 <br> Email: info@example.com</p>
+            </div>
+            <div class="col-lg-2 col-md-6">
+                <h5 class="text-white mb-3" style="font-size: medium;">Useful Links</h5>
+                <ul class="list-unstyled text-muted" style="font-size: 15px;">
+                    <li><a href="#"><a href="#!" class="text-reset"><i class="fa-sharp fa-solid fa-chevron-right fa-2xs" style="color: #0ec41a;"></i> Home</a></li>
+                    <li><a href="#"><a href="#!" class="text-reset"><i class="fa-sharp fa-solid fa-chevron-right fa-2xs" style="color: #0ec41a;"></i>  About Us</a></li>
+                    <li><a href="#"><a href="#!" class="text-reset"><i class="fa-sharp fa-solid fa-chevron-right fa-2xs" style="color: #0ec41a;"></i>  Services</a></li>
+                    <li><a href="#"><a href="#!" class="text-reset"><i class="fa-sharp fa-solid fa-chevron-right fa-2xs" style="color: #0ec41a;"></i>  Terms of service</a></li>
+                    <li><a href="#"><a href="#!" class="text-reset"><i class="fa-sharp fa-solid fa-chevron-right fa-2xs" style="color: #0ec41a;"></i> Privacy policy</a></li>
+                </ul>
+            </div>
+            <div class="col-lg-2 col-md-6">
+                <h5 class="text-white mb-3" style="font-size: medium;">Our Services</h5>
+                <ul class="list-unstyled text-muted" style="font-size: 15px;">
+                    <li><a href="#"><a href="#!" class="text-reset"><i class="fa-sharp fa-solid fa-chevron-right fa-2xs" style="color: #0ec41a;"></i> Web Design</a></li>
+                    <li><a href="#"><a href="#!" class="text-reset"><i class="fa-sharp fa-solid fa-chevron-right fa-2xs" style="color: #0ec41a;"></i> Web Development</a></li>
+                    <li><a href="#"><a href="#!" class="text-reset"><i class="fa-sharp fa-solid fa-chevron-right fa-2xs" style="color: #0ec41a;"></i> Product Management</a></li>
+                    <li><a href="#"><a href="#!" class="text-reset"><i class="fa-sharp fa-solid fa-chevron-right fa-2xs" style="color: #0ec41a;"></i> Marketing</a></li>
+                    <li><a href="#"><a href="#!" class="text-reset"><i class="fa-sharp fa-solid fa-chevron-right fa-2xs" style="color: #0ec41a;"></i> Grapchic Design</a></li>
+                </ul>
+            </div>
+            <div class="col-lg-4 col-md-6">
+                <h5 class="text-white mb-3" style="font-size: medium;">Join Our  Newsletter</h5>
+                <p class="small text-muted">Tanem quem mulla quae legam multos aute sint culpa<br> legam noster magna</p>
+                <form action="#">
+                    <div class="input-group mb-3" style="background-color: white;">
+                        <input class="form-control rounded" type="text" aria-describedby="button-addon2">
+                        <button type="button" class="btn btn-success" id="button-addon2" type="button">Subscribe</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</footer>
 </html>
