Make some of the Pricing page content responsive.

--- a/Pricing.html
+++ b/Pricing.html
@@ -76,79 +76,90 @@
         
 
     <!-- Pricing -->
-    <div>
-        <div class="container pt-5 pb-5">
-            <div class="card-deck">
-                <div class="card ">
-                    <div class="card-header text-center font-weight-bold">Free</div>
-                    <div class="card-body text-center">
-                        <div class="card-title d-flex justify-content-center">
-                            <span><span class="font-weight-bold text-success" style="font-size: 2.5em;"><sup>$</sup>0</span><span class="text-muted"> / month</span></span>
-                        </div>
-                        <p class="card-text">Aida dere</p>
-                        <p class="card-text">Nec feugiat nisl</p>
-                        <p class="card-text">Nulla at volutpat dola</p>
-                        <p class="card-text text-muted"><del>Pharetra massa</del></p>
-                        <p class="card-text text-muted"><del>Massa ultricies mi</del></p>
-                    </div>
-                    <div class="card-footer text-center">
-                        <button class="btn bg-success text-white font-weight-bold pl-4 pr-4" type="button">Buy Now</button>
-                    </div>
-                </div>
+    <div class="container text-center d-lg-flex pt-5 pb-5">
+        <div class="d-md-flex justify-content-center div_2">
+            <div class="card m-2 pricing_card_div">
+                <a href="#" class="card-header font-weight-bold card_header">Free</a>
+                <div class="card-body">
+                    <h5 class="card-title">
+                        <span class="text-success" style="font-size: 2.5em;"><sup>$</sup>0</span>
+                        <span class="text-muted font-weight-normal"> / month</span>
+                    </h5>
 
-                <div class="card">
-                    <div class="card-header text-center font-weight-bold">Business</div>
-                    <div class="card-body text-center">
-                        <div class="card-title d-flex justify-content-center">
-                            <span><span class="font-weight-bold text-success" style="font-size: 2.5em;"><sup>$</sup>19</span><span class="text-muted"> / month</span></span>
-                        </div>
-                        <p class="card-text">Aida dere</p>
-                        <p class="card-text">Nec feugiat nisl</p>
-                        <p class="card-text">Nulla at volutpat dola</p>
-                        <p class="card-text ">Pharetra massa</p>
-                        <p class="card-text text-muted"><del>Massa ultricies mi</del></p>
-                    </div>
-                    <div class="card-footer text-center">
-                        <button class="btn bg-success text-white font-weight-bold pl-4 pr-4" type="button">Buy Now</button>
-                    </div>
+                    <p class="card-text">Aida dere</p>
+                    <p class="card-text">Nec feugiat nisl</p>
+                    <p class="card-text">Nulla at volutpat dola</p>
+                    <p class="card-text text-muted"><del>Pharetra massa</del></p>
+                    <p class="card-text text-muted"><del>Massa ultricies mi</del></p>
                 </div>
-
-                <div class="card">
-                    <div class="card-header text-center font-weight-bold">Developer</div>
-                    <div class="card-body text-center">
-                        <div class="card-title d-flex justify-content-center">
-                            <span><span class="font-weight-bold text-success" style="font-size: 2.5em;"><sup>$</sup>29</span><span class="text-muted"> / month</span></span>
-                        </div>
-                        <p class="card-text">Aida dere</p>
-                        <p class="card-text">Nec feugiat nisl</p>
-                        <p class="card-text">Nulla at volutpat dola</p>
-                        <p class="card-text ">Pharetra massa</p>
-                        <p class="card-text ">Massa ultricies mi</p>
-                    </div>
-                    <div class="card-footer text-center">
-                        <button class="btn bg-success text-white font-weight-bold pl-4 pr-4" type="button">Buy Now</button>
-                    </div>
+                <div class="card-footer">
+                    <button type="button" class="btn btn-success font-weight-bold">Buy Now</button>
                 </div>
+            </div>
+            <div class="card m-2 pricing_card_div">
+                <a href="#" class="card-header font-weight-bold card_header">Business</a>
+                <div class="card-body">
+                    <h5 class="card-title">
+                        <span class="text-success" style="font-size: 2.5em;"><sup>$</sup>19</span>
+                        <span class="text-muted font-weight-normal"> / month</span>
+                    </h5>
 
-                <div class="card with_ribbon">
-                    <div class="bg-success text-white text-center ribbon">Advanced</div>
-                    <div class="card-header text-center font-weight-bold pt-0 mt-0">Ultimate</div>
-                    <div class="card-body text-center">
-                        <div class="card-title d-flex justify-content-center">
-                            <span><span class="font-weight-bold text-success" style="font-size: 2.5em;"><sup>$</sup>49</span><span class="text-muted"> / month</span></span>
-                        </div>
-                        <p class="card-text">Aida dere</p>
-                        <p class="card-text">Nec feugiat nisl</p>
-                        <p class="card-text">Nulla at volutpat dola</p>
-                        <p class="card-text ">Pharetra massa</p>
-                        <p class="card-text ">Massa ultricies mi</p>
-                    </div>
-                    <div class="card-footer text-center">
-                        <button class="btn bg-success text-white font-weight-bold pl-4 pr-4" type="button">Buy Now</button>
-                    </div>
+                    <p class="card-text">Aida dere</p>
+                    <p class="card-text">Nec feugiat nisl</p>
+                    <p class="card-text">Nulla at volutpat dola</p>
+                    <p class="card-text">Pharetra massa</p>
+                    <p class="card-text text-muted"><del>Massa ultricies mi</del></p>
+                </div>
+                <div class="card-footer">
+                    <button type="button" class="btn btn-success font-weight-bold">Buy Now</button>
                 </div>
             </div>
         </div>
+        
+        <div class="d-md-flex justify-content-center div_2">
+            <div class="card m-2 pricing_card_div">
+                <a href="#" class="card-header font-weight-bold card_header">Developer</a>
+                <div class="card-body">
+                    <h5 class="card-title">
+                        <span class="text-success" style="font-size: 2.5em;"><sup>$</sup>29</span>
+                        <span class="text-muted font-weight-normal"> / month</span>
+                    </h5>
+
+                    <p class="card-text">Aida dere</p>
+                    <p class="card-text">Nec feugiat nisl</p>
+                    <p class="card-text">Nulla at volutpat dola</p>
+                    <p class="card-text">Pharetra massa</p>
+                    <p class="card-text">Massa ultricies mi</p>
+                </div>
+                <div class="card-footer">
+                    <button type="button" class="btn btn-success font-weight-bold">Buy Now</button>
+                </div>
+            </div>
+            <div class="card m-2 pricing_card_div">
+                <a href="#" class="card-header font-weight-bold card_header">
+                    Ultimate
+                </a>
+                <div class="ribbon_container">
+                    <span class="bg-success d-flex justify-content-center align-items-center text-white font-weight-bold ribbon">Advanced</span>
+                </div>
+
+                <div class="card-body">
+                    <h5 class="card-title">
+                        <span class="text-success" style="font-size: 2.5em;"><sup>$</sup>49</span>
+                        <span class="text-muted font-weight-normal"> / month</span>
+                    </h5>
+
+                    <p class="card-text">Nec feugiat nisl</p>
+                    <p class="card-text">Nulla at volutpat dola</p>
+                    <p class="card-text">Pharetra massa</p>
+                    <p class="card-text">Massa ultricies mi</p>
+                </div>
+                <div class="card-footer">
+                    <button type="button" class="btn btn-success font-weight-bold">Buy Now</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
         <!-- Frequently Asked Questions -->
         <div class="d-flex justify-content-center pt-5 pb-5 bg-light">
