Add other pages and files.

--- a/Blog_Single.html
+++ b/Blog_Single.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- CSS -->
-    <link rel="stylesheet" href="styles_mon.css">
+    <link rel="stylesheet" href="styles2.css">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
@@ -27,9 +27,9 @@
         <div class="collapse navbar-collapse justify-content-end" id="menu_div">
             <div class="navbar-nav">
                 <div class="nav-item">
-                    <a class="nav-link text-dark font-weight-bold" href="#">HOME</a>
+                    <a class="nav-link text-dark font-weight-bold pr-3" href="#">HOME</a>
                 </div>
-                <div class="nav-item dropdown">
+                <div class="nav-item dropdown pr-3">
                     <a class="nav-link text-dark font-weight-bold dropdown-toggle" data-toggle="dropdown" href="#">ABOUT</a>
 
                     <div class="dropdown-menu dropright border-0">
@@ -44,24 +44,41 @@
                             </div>
                     </div>
                 </div>
-                <div class="nav-item">
+                <div class="nav-item pr-3">
                     <a class="nav-link text-dark font-weight-bold" href="#">SERVICES</a>
                 </div>
-                <div class="nav-item">
+                <div class="nav-item pr-3">
                     <a class="nav-link text-dark font-weight-bold" href="Portfolio.html">PORTFOLIO</a>
                 </div>
-                <div class="nav-item">
+                <div class="nav-item pr-3">
                     <a class="nav-link text-dark font-weight-bold" href="Pricing.html">PRICING</a>
                 </div>
-                <div class="nav-item">
+                <div class="nav-item pr-3">
                     <a class="nav-link text-dark font-weight-bold" href="Blog.html">BLOG</a>
                 </div>
-                <div class="nav-item">
+                <div class="nav-item pr-3">
                     <a class="nav-link text-dark font-weight-bold" href="#">CONTACT</a>
+                </div>
+                <div class="nav-item d-flex pr-3">
+                    <a class="d-flex align-items-center pr-1" href="#">
+                        <i class="fa-brands fa-twitter text-secondary"></i>
+                    </a>
+                    <a class="d-flex align-items-center pr-1" href="#">
+                        <i class="fa-brands fa-facebook text-secondary"></i>
+                    </a>
+                    <a class="d-flex align-items-center pr-1" href="#">
+                        <i class="fa-brands fa-instagram text-secondary"></i>
+                    </a>
+                    <a class="d-flex align-items-center pr-1" href="#">
+                        <i class="fa-brands fa-linkedin text-secondary"></i>
+                    </a>
                 </div>
             </div>
         </div>
     </nav>
+    <!-- Navigation -->
+
+    
 
       <div class="bg-success">
         <div class="container d-flex p-3">
@@ -78,7 +95,7 @@
         
 
     <!-- Blog -->
-    <div class="container d-flex  blog_div mb-5">
+    <div class="container d-lg-flex  blog_div mb-5">
         <div class="blog_imgs_div">
             <div class="card shadow border-0 mt-5">
                 <img src="images/blog_img_1.png" alt="dolores">
@@ -109,7 +126,9 @@
                     <div class="d-flex align-items-center pt-4 pb-4 vertical_line_div">
                         <div class="bg-dark vertical_line"></div>
                         <div class="d-flex align-items-center text-center p-5 vertical_line_text">
-                            Et vero doloremque tempore voluptatem ratione vel aut. Deleniti sunt animi aut. Aut eos aliquam doloribus minus autem quos.
+                            <h5 class="le">
+                                Et vero doloremque tempore voluptatem ratione vel aut. Deleniti sunt animi aut. Aut eos aliquam doloribus minus autem quos.
+                            </h5>
                         </div>
                     </div>
 
@@ -119,7 +138,7 @@
                         </small>
                     </p>
                     <h5>Et quae iure vel ut odit alias.</h5>
-                    <p clas="card-text">
+                    <p class="card-text">
                         <small>
                             Officiis animi maxime nulla quo et harum eum quis a. Sit hic in qui quos fugit ut rerum atque. Optio provident dolores atque voluptatem rem excepturi molestiae qui. Voluptatem laborum omnis ullam quibusdam perspiciatis nulla nostrum. Voluptatum est libero eum nesciunt aliquid qui. Quia et suscipit non sequi. Maxime sed odit. Beatae nesciunt nesciunt acusamus quia aut ratione aspernatur dolor. Sint harum eveniet dicta exercitationem minima. Exercitationem omnis asperiores natus aperiam dolor consequatur id ex sed. Quibusdam rerum dolores sint consequatur quidem ea. Beatae minima sunt libero accusamus mollitia aut atque aut.
                         </small>
