--- a/Blog.html
+++ b/Blog.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- CSS -->
-    <link rel="stylesheet" href="styles_mon.css">
+    <link rel="stylesheet" href="styles2.css">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
@@ -28,9 +28,9 @@
         <div class="collapse navbar-collapse justify-content-end" id="menu_div">
             <div class="navbar-nav">
                 <div class="nav-item">
-                    <a class="nav-link text-dark font-weight-bold" href="#">HOME</a>
+                    <a class="nav-link text-dark font-weight-bold pr-3" href="#">HOME</a>
                 </div>
-                <div class="nav-item dropdown">
+                <div class="nav-item dropdown pr-3">
                     <a class="nav-link text-dark font-weight-bold dropdown-toggle" data-toggle="dropdown" href="#">ABOUT</a>
 
                     <div class="dropdown-menu dropright border-0">
@@ -45,24 +45,39 @@
                             </div>
                     </div>
                 </div>
-                <div class="nav-item">
+                <div class="nav-item pr-3">
                     <a class="nav-link text-dark font-weight-bold" href="#">SERVICES</a>
                 </div>
-                <div class="nav-item">
+                <div class="nav-item pr-3">
                     <a class="nav-link text-dark font-weight-bold" href="Portfolio.html">PORTFOLIO</a>
                 </div>
-                <div class="nav-item">
+                <div class="nav-item pr-3">
                     <a class="nav-link text-dark font-weight-bold" href="Pricing.html">PRICING</a>
                 </div>
-                <div class="nav-item">
+                <div class="nav-item pr-3">
                     <a class="nav-link text-dark font-weight-bold" href="Blog.html">BLOG</a>
                 </div>
-                <div class="nav-item">
+                <div class="nav-item pr-3">
                     <a class="nav-link text-dark font-weight-bold" href="#">CONTACT</a>
+                </div>
+                <div class="nav-item d-flex pr-3">
+                    <a class="d-flex align-items-center pr-1" href="#">
+                        <i class="fa-brands fa-twitter text-secondary"></i>
+                    </a>
+                    <a class="d-flex align-items-center pr-1" href="#">
+                        <i class="fa-brands fa-facebook text-secondary"></i>
+                    </a>
+                    <a class="d-flex align-items-center pr-1" href="#">
+                        <i class="fa-brands fa-instagram text-secondary"></i>
+                    </a>
+                    <a class="d-flex align-items-center pr-1" href="#">
+                        <i class="fa-brands fa-linkedin text-secondary"></i>
+                    </a>
                 </div>
             </div>
         </div>
     </nav>
+    <!-- Navigation -->
 
 
       <div class="bg-success">
@@ -78,7 +93,7 @@
         
 
     <!-- Blog -->
-    <div class="container d-flex  blog_div">
+    <div class="container d-lg-flex  blog_div">
         <div class="blog_imgs_div">
             <div class="card shadow border-0 mt-5">
                 <img src="images/blog_img_1.png" alt="dolores">
