--- a/Pricing.html
+++ b/Pricing.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- CSS -->
-    <link rel="stylesheet" href="styles_mon.css">
+    <link rel="stylesheet" href="styles2.css">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
@@ -27,9 +27,9 @@
         <div class="collapse navbar-collapse justify-content-end" id="menu_div">
             <div class="navbar-nav">
                 <div class="nav-item">
-                    <a class="nav-link text-dark font-weight-bold" href="#">HOME</a>
+                    <a class="nav-link text-dark font-weight-bold pr-3" href="#">HOME</a>
                 </div>
-                <div class="nav-item dropdown">
+                <div class="nav-item dropdown pr-3">
                     <a class="nav-link text-dark font-weight-bold dropdown-toggle" data-toggle="dropdown" href="#">ABOUT</a>
 
                     <div class="dropdown-menu dropright border-0">
@@ -44,24 +44,41 @@
                             </div>
                     </div>
                 </div>
-                <div class="nav-item">
+                <div class="nav-item pr-3">
                     <a class="nav-link text-dark font-weight-bold" href="#">SERVICES</a>
                 </div>
-                <div class="nav-item">
+                <div class="nav-item pr-3">
                     <a class="nav-link text-dark font-weight-bold" href="Portfolio.html">PORTFOLIO</a>
                 </div>
-                <div class="nav-item">
+                <div class="nav-item pr-3">
                     <a class="nav-link text-dark font-weight-bold" href="Pricing.html">PRICING</a>
                 </div>
-                <div class="nav-item">
+                <div class="nav-item pr-3">
                     <a class="nav-link text-dark font-weight-bold" href="Blog.html">BLOG</a>
                 </div>
-                <div class="nav-item">
+                <div class="nav-item pr-3">
                     <a class="nav-link text-dark font-weight-bold" href="#">CONTACT</a>
+                </div>
+                <div class="nav-item d-flex pr-3">
+                    <a class="d-flex align-items-center pr-1" href="#">
+                        <i class="fa-brands fa-twitter text-secondary"></i>
+                    </a>
+                    <a class="d-flex align-items-center pr-1" href="#">
+                        <i class="fa-brands fa-facebook text-secondary"></i>
+                    </a>
+                    <a class="d-flex align-items-center pr-1" href="#">
+                        <i class="fa-brands fa-instagram text-secondary"></i>
+                    </a>
+                    <a class="d-flex align-items-center pr-1" href="#">
+                        <i class="fa-brands fa-linkedin text-secondary"></i>
+                    </a>
                 </div>
             </div>
         </div>
     </nav>
+    <!-- Navigation -->
+
+    
 
     <div class="bg-success">
         <div class="container d-flex p-3">
@@ -89,8 +106,8 @@
                     <p class="card-text">Aida dere</p>
                     <p class="card-text">Nec feugiat nisl</p>
                     <p class="card-text">Nulla at volutpat dola</p>
-                    <p class="card-text text-muted"><del>Pharetra massa</del></p>
-                    <p class="card-text text-muted"><del>Massa ultricies mi</del></p>
+                    <p class="card-text">Pharetra massa</p>
+                    <p class="card-text">Massa ultricies mi</p>
                 </div>
                 <div class="card-footer">
                     <button type="button" class="btn btn-success font-weight-bold">Buy Now</button>
@@ -108,7 +125,7 @@
                     <p class="card-text">Nec feugiat nisl</p>
                     <p class="card-text">Nulla at volutpat dola</p>
                     <p class="card-text">Pharetra massa</p>
-                    <p class="card-text text-muted"><del>Massa ultricies mi</del></p>
+                    <p class="card-text">Massa ultricies mi</p>
                 </div>
                 <div class="card-footer">
                     <button type="button" class="btn btn-success font-weight-bold">Buy Now</button>
